--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "interactive-guidelines-for-thematic-map-choice",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "engines": {
+    "node": "16.14.1"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
