--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "vite": "^2.8.0"
   },
   "dependencies": {
+    "ajv": "^8.11.0",
     "bootstrap": "^5.1.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
     "three": "^0.138.3"
   }
 }
